# crewai-agents

./: .gitignore  CLAUDE.md  README.md  requirements.txt
.github/workflows/: financial_agent.yaml  jobsearch_crew.yaml  project_planning_crew.yaml  sales_pipeline_crew.yaml
financial_agent/: README.md  env.dist  pyproject.toml
financial_agent/src/financial_agent/: crew.py  main.py
financial_agent/src/financial_agent/config/: agents.yaml  tasks.yaml
financial_agent/tests/: test_agents.py
jobsearch_crew/: .gitignore  README.md  env.dist  interview_materials.md  interview_materials_v1.md  pyproject.toml  tailored_resume.md  tailored_resume_v1.md
jobsearch_crew/db/: chroma.sqlite3
jobsearch_crew/src/jobsearch_crew/: crew.py  main.py
jobsearch_crew/src/jobsearch_crew/config/: agents.yaml  tasks.yaml
jobsearch_crew/tests/: test_agents.py
project_planning_crew/: .gitignore  README.md  pyproject.toml
project_planning_crew/src/project_planning_crew/: crew.py  main.py
project_planning_crew/src/project_planning_crew/config/: agents.yaml  tasks.yaml
project_planning_crew/src/project_planning_crew/tools/: board_fetcher_tool.py  card_fetcher_tool.py
sales_pipeline_crew/: .gitignore  README.md  pyproject.toml  pytest.ini  report.md
sales_pipeline_crew/src/sales_pipeline_crew/: crew.py  main.py
sales_pipeline_crew/tests/: test_agents.py
