[tool.poetry]
name = "project_planning_crew"
version = "0.1.0"
description = "project_planning_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}
setuptools = "^69.0.0"
ipython = "^8.31.0"

[tool.poetry.scripts]
project_planning_crew = "project_planning_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"