[tool.poetry]
name = "sales_pipeline_crew"
version = "0.1.0"
description = "sales_pipeline_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}

[tool.poetry.scripts]
sales_pipeline_crew = "sales_pipeline_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"